<resources>
    <string name="app_name">Tienda</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tienda">Inventario</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="msg_nombre">Nombre del articulo</string>
    <string name="msg_modelo">Modelo del articulo</string>
    <string name="msg_precio">Precio del articulo</string>
    <string name="bt_add_lugar">Agregar articulo</string>
    <string name="msg_lugar_added">Articulo agregado</string>
    <string name="msg_data">Faltan datos</string>

</resources>