<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tienda">

    <fragment
        android:id="@+id/nav_tienda"
        android:name="com.tienda.ui.tienda.TiendaFragment"
        android:label="@string/menu_tienda"
        tools:layout="@layout/fragment_tienda" >
        <action
            android:id="@+id/action_nav_tienda_to_addTiendaFragment"
            app:destination="@id/addTiendaFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tienda.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tienda.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addTiendaFragment"
        android:name="com.tienda.ui.tienda.AddTiendaFragment"
        android:label="@string/bt_add_lugar"
        tools:layout="@layout/fragment_add_tienda" >
        <action
            android:id="@+id/action_addTiendaFragment_to_nav_tienda"
            app:destination="@id/nav_tienda" />
    </fragment>
</navigation>