<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context="ui.tienda.AddTiendaFragment" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <EditText
        android:id="@+id/etModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_modelo"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_precio"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_lugar"
</LinearLayout>